# esp32_kvm_webserver

./: CLAUDE.md  CMakeLists.txt  PLAN.md  复赛准备文档.md  比赛答辩话术.md  网页端准备.md
components/cjson/: CMakeLists.txt
main/: CMakeLists.txt  kvm_controller.c  main.c  uart_comm.c  web_server.c  wifi_manager.c
main/include/: kvm_controller.h  uart_comm.h  web_server.h  wifi_manager.h
main/web/: index.html  script.js  style.css
memory-bank/: activeContext.md  progress.md  projectbrief.md  systemPatterns.md  techContest.md
